--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "blurhash": "^2.0.5",
+    "js-cookie": "^3.0.5",
     "loadable-image": "^3.1.1",
     "react": "^18.2.0",
     "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-icons": "^5.0.1",
     "react-loader-icon": "^1.0.1",
     "react-loading-icons": "^1.1.0",
